[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
nix = "0.23.1"
xmodem = { path = "../xmodem", features = ["std"] }
xshell = "0.2.1"
